--- a/src/Trace/views/onlinemall/figure/index.html
+++ b/src/Trace/views/onlinemall/figure/index.html
@@ -1,13 +1,17 @@
 ﻿<div ng-controller="views.onlinemall.figure.index as vm">
     <div class="page-bar">
-        <div class="col-xs-9">
+        <div class="col-xs-8">
             <ul class="page-breadcrumb">
                 <li>
                     <i class="fa fa-hand-o-right"></i>
                     <a href="#">轮播图管理</a>
                 </li>
+            </ul>
+        </div>
+        <div class="col-xs-4 right">
+            <ul class="page-breadcrumb" style="float: right">
                 <li>
-                    <button ng-click="vm.add()"> 添加</button>
+                    <button class="btn btn-primary blue" ng-click="vm.add()"><i class="fa fa-plus"></i> 添加</button>
                 </li>
 
             </ul>
@@ -15,31 +19,29 @@
     </div>
     <div class="portlet light bordered">
         <div class="row">
-            <div class="col-xs-12 ">
-                <div class="col-xs-5">
-                    <div class="form-group form-md-line-input">
-                        <label class="col-md-3 control-label">轮播图名称</label>
-                        <div class="col-md-9">
-                            <input type="text" placeholder="轮播图名称"
-                                   ng-model="vm.table.filter.name">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
+                <div class="col-xs-6">
                     <div class="form-group form-md-line-input">
                         <label class="col-md-4 control-label">状态</label>
                         <div class="col-md-8">
-                            <select ng-model="vm.table.filter.state" ng-options="m.id as m.name for m in vm.states"></select>
+                            <select ng-model="vm.table.filter.state"  class="form-control edited" ui-validate="'$value>0'"
+                                    ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.states"></select>
                             <div class="form-control-focus"> </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-3">
+                <div class="col-xs-6">
+                    <div class="form-group form-md-line-input has-info">
+                        <div class="input-group input-group-sm">
+                            <div class="input-group-control">
+                                <input type="text" class="form-control input-sm" placeholder="按条件搜索" ng-model="vm.table.filter.name">
+                            </div>
+                            <span class="input-group-btn btn-right">
+                                <button ng-click="vm.init()" class="btn green-haze" type="button">Go!</button>
+                            </span>
+                        </div>
+                    </div>
+
                 </div>
-                <div class="col-xs-1">
-                    <button ng-click="vm.init()"> 查询</button>
-                </div>
-            </div>
 
         </div>
         <div class="row">
