--- a/src/Trace/views/users/index.html
+++ b/src/Trace/views/users/index.html
@@ -1,64 +1,92 @@
 ﻿<div ng-controller="views.users.index as vm">
     <div class="page-bar">
-        <ul class="page-breadcrumb">
-            <li>
-                <i class="fa fa-hand-o-right"></i>
-                <a href="#">用户管理</a>
-            </li>
-        </ul>
+        <div class="page-bar">
+            <div class="col-xs-8">
+                <ul class="page-breadcrumb">
+                    <li>
+                        <i class="fa fa-hand-o-right"></i>
+                        <a href="#">用户管理</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-xs-4 right">
+                <ul class="page-breadcrumb" style="float: right">
+                    <li>
+                        <button class="btn btn-primary blue" ng-click="vm.export()"><i class="fa fa-plus"></i> 导出</button>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
     </div>
     <div class="portlet light bordered">
         <div class="row">
-            <div class="col-xs-8 text-left">
-                <div class="col-md-12">
-                    <div class="input-icon right">
-                        <i ng-click="vm.init()" class="fa fa-search"></i>
-                        <input type="text" class="form-control input-circle" placeholder="按条件搜索" value="" ng-model="vm.filter.filter">
-                    </div>
+            <div class="col-xs-6">
+                <div class="input-icon right">
+                    <i ng-click="vm.init()" class="fa fa-search"></i>
+                    <input type="text" class="form-control input-circle" placeholder="手机号" ng-model="vm.table.filter.name">
                 </div>
             </div>
-            <div class="col-xs-4 text-right">
-                <button class="btn btn-primary blue" ng-click="vm.add()"><i class="fa fa-plus"></i> 添加</button>
-                <button class="btn btn-primary blue" ng-click="vm.edit()"><i class="fa fa-plus"></i> 编辑</button>
-                <button class="btn btn-primary blue" ng-click="vm.delete()"><i class="fa fa-times"></i> 删除</button>
+            <div class="col-xs-6">
+                <div class="input-icon right">
+                    <i ng-click="vm.init()" class="fa fa-search"></i>
+                    <input type="text" class="form-control input-circle" placeholder="地区" ng-model="vm.table.filter.name">
+                </div>
             </div>
-        </div>
-      <div class="row">
-          <table object-table
-                 data="vm.table.data"
-                 check-model="vm.table.checkModel"
-                 display="vm.table.pageConfig.itemsPerPage"
-                 headers="礼物,图片,价格,票数,创建时间"
-                 fields="giftName,imageUrl,price,bevote,creationTime">
-              <tbody>
-                  <tr ng-click="$owner.showeditinfo(item);setSelected(item)">
-                      <td>
-                          <input type="checkbox" ng-model="::item.checked"  
-                                 ng-click="$event.stopPropagation(); checkOne(item)" />
-                      </td>
-                      <td show-td item="item" name="giftName"></td>
-                      <td show-td item="item" name="imageUrl"></td>
-                      <td show-td item="item" name="price"></td>
-                      <td show-td item="item" name="beVote"></td>
-                      <td show-td item="item" name="creationTime"></td>
-                  </tr>
-              </tbody>
-          </table>
-          <!--分页-->
-          <nav class="paging">
-              <obj-pagination conf="vm.table.pageConfig"></obj-pagination>
-          </nav>
 
-      </div>
+        </div>
+        <div class="row">
+            <table st-table="vm.table.data" class="table table-striped">
+                <thead>
+                    <tr>
+                        <th st-sort="a">用户昵称</th>
+                        <th>手机号</th>
+                        <th>性别</th>
+                        <th>出生日期</th>
+                        <th>所在城市</th>
+                        <th>积分</th>
+                        <th>成就值</th>
+                        <th>纪念章</th>
+                        <th>登录密码</th>
+                        <th>称号</th>
+                        <th>操作</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.data">
+                        <td>{{row.a}}</td>
+                        <td>{{row.b}}</td>
+                        <td>{{row.c}}</td>
+                        <td>{{row.balance}}</td>
+                        <td>{{row.email}}</td>
+                        <td>{{row.email}}</td>
+                        <td>{{row.email}}</td>
+                        <td>{{row.email}}</td>
+                        <td>{{row.email}}</td>
+                        <td>{{row.email}}</td>
+                        <td>
+                            <a href="#" ng-click="vm.modify(row)">
+                                修改
+                            </a>
+                            <a href="#" ng-click="vm.low(row)">
+                                下线
+                            </a>
+                            <a href="#" ng-click="vm.delete(row)">
+                                删除
+                            </a>
+                        </td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="7">
+                            <div pagination conf="vm.table.pageConfig"></div>
+                        </td>
+                    </tr>
+                </tfoot>
+            </table>
+
+
+        </div>
     </div>
 </div>
-
-
-
-
-
-
-
-
-
-
