--- a/src/Trace/views/series/index.html
+++ b/src/Trace/views/series/index.html
@@ -8,10 +8,13 @@
         </ul>
     </div>
     <div class="portlet light bordered">
-        <div id="map" style="height:470px;-webkit-transition: all 0.5s ease-in-out;transition: all 0.5s ease-in-out;"></div>
-      
+        <div baidu-map="f72BmbnulkYkxmS3YGqz94CTmutP0jbL" map-ready="vm.mapReady(map,draw)" style="height: 470px">
+
+        </div>
+      <!--  <div id="map" style="height: 470px; -webkit-transition: all 0.5s ease-in-out; transition: all 0.5s ease-in-out;"></div>-->
+
     </div>
-    <script type="text/javascript">
+    <!--<script type="text/javascript">
         // 百度地图API功能
         var map = new BMap.Map('map');
         var poi = new BMap.Point(116.307851, 40.057031);
@@ -68,7 +71,7 @@
 
         //添加鼠标绘制工具监听事件，用于获取绘制结果
         drawingManager.addEventListener("overlaycomplete", overlaycomplete);
-    </script>
+    </script>-->
 </div>
 
 
