--- a/src/Trace/views/common/allowpermission.html
+++ b/src/Trace/views/common/allowpermission.html
@@ -2,25 +2,37 @@
     <form name="modalform" role="form" novalidate class="form-validation">
         <div class="modal-header">
             <h4 class="modal-title">
-                <span ng-if="vm.gift.id">分配权限: {{vm.gift.giftName}} </span>
+                <span ng-if="vm.role.id">分配权限: {{vm.role.name}} </span>
             </h4>
         </div>
         <div class="modal-body">
             <div class="row">
                 <div class="form-group form-md-line-input">
-                    <label class="col-md-3 control-label">用户名</label>
+                    <label class="col-md-3 control-label">角色名</label>
                     <div class="col-md-9">
-                        <input type="number" class="form-control" placeholder="用户名" readonly
-                               ng-class="{'edited':vm.user.user_name}" required ng-model="vm.user.user_name">
+                        <input type="text" class="form-control" placeholder="用户名" readonly
+                               ng-class="{'edited':vm.role.name}" required ng-model="vm.role.name">
                         <div class="form-control-focus"> </div>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="form-group form-md-line-input">
+                    <label>权限列表</label>
+                    <div class="md-checkbox-inline">
+                        <div ng-repeat="row in vm.permissions" class="md-checkbox has-info">
+                            <input type="checkbox" id="_{{row.id}}" class="md-check" ng-model="temp" ng-click="vm.change(row,temp)">
+                            <label for="_{{row.id}}">
+                                <span></span>
+                                <span class="check"></span>
+                                <span class="box"></span> {{row.title}}
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-        </div>
-        <div class="row">
-          
-        </div>
 
 
 
