--- a/src/Trace/views/onlinemall/product/index.html
+++ b/src/Trace/views/onlinemall/product/index.html
@@ -20,17 +20,40 @@
     </div>
     <div class="portlet light bordered">
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-2">
                 <div class="form-group form-md-line-input">
-                    <label class="col-md-4 control-label">状态</label>
-                    <div class="col-md-8">
+                    <label class="col-md-5 control-label">状态</label>
+                    <div class="col-md-7">
                         <select ng-model="vm.table.filter.state" class="form-control edited" ui-validate="'$value>0'"
                                 ng-class="{'edited':vm.table.filter.state>0}" ng-options="m.id as m.name for m in vm.states"></select>
                         <div class="form-control-focus"> </div>
                     </div>
                 </div>
             </div>
-            <div class="col-xs-5">
+            <div class="col-xs-7">
+                <div class="form-group form-md-line-input">
+                    <label class="col-md-2 control-label">选择系列</label>
+                    <div class="col-md-4">
+                        <select ng-model="vm.table.filter.a"
+                                class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(1)"
+                                ng-class="{'edited':vm.table.filter.a>0}" ng-options="m.id as m.name for m in vm.cate.a"></select>
+                        <div class="form-control-focus"> </div>
+                    </div>
+                    <div class="col-md-3">
+                        <select ng-model="vm.table.filter.b"
+                                class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(2)"
+                                ng-class="{'edited':vm.table.filter.b>0}" ng-options="m.id as m.name for m in vm.cate.b"></select>
+                        <div class="form-control-focus"> </div>
+                    </div>
+                    <div class="col-md-3">
+                        <select ng-model="vm.table.filter.c"
+                                class="form-control edited" ui-validate="'$value>0'"
+                                ng-class="{'edited':vm.table.filter.c>0}" ng-options="m.id as m.name for m in vm.cate.c"></select>
+                        <div class="form-control-focus"> </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-3">
                 <div class="form-group form-md-line-input has-info">
                     <div class="input-group input-group-sm">
                         <div class="input-group-control">
