--- a/src/Trace/views/onlinemall/product/modify.html
+++ b/src/Trace/views/onlinemall/product/modify.html
@@ -212,45 +212,34 @@
                                 </li>
                             </ul>
                             <div class="tab-content">
-                                <table st-table="vm.table.data" class="table table-striped">
+                                <table st-table="vm.products" class="table table-striped">
                                     <thead>
                                         <tr>
-                                            <th st-sort="a">名称</th>
+                                            <th st-sort="a">产品名称</th>
                                             <th>创建时间</th>
+                                            <th>价格</th>
+                                            <th>库存</th>
                                             <th>一级分类</th>
                                             <th>二级分类</th>
-                                            <th>系列</th>
-                                            <th>基础成就</th>
+                                            <th>三级分类</th>
                                             <th>状态</th>
-                                            <th>操作</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.data">
-                                            <td>{{row.a}}</td>
-                                            <td>{{row.b}}</td>
-                                            <td>{{row.c}}</td>
-                                            <td>{{row.balance}}</td>
-                                            <td>{{row.email}}</td>
-                                            <td>{{row.email}}</td>
-                                            <td>{{row.email}}</td>
-                                            <td>
-                                                <button type="button" ng-click="vm.delete(row)" class="btn btn-sm btn-danger">
-                                                    删除
-                                                </button>
-                                            </td>
+                                        <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.products">
+                                            <td>{{row.name}}</td>
+                                            <td>{{row.online_time}}</td>
+                                            <td>{{row.price}}</td>
+                                            <td>{{row.inventory}}</td>
+                                            <td>{{row.badge_category1}}</td>
+                                            <td>{{row.badge_category2}}</td>
+                                            <td>{{row.badge_category3}}</td>
+                                            <td>{{row.status==1?'有效':'无效'}}</td>
                                         </tr>
                                     </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <td colspan="7">
-                                                <div pagination conf="vm.table.pageConfig"></div>
-                                            </td>
-                                        </tr>
-                                    </tfoot>
+                                
                                 </table>
-
-
+                              
                             </div>
                         </div>
                     </div>
